# GLTF_For_Renpy_rs

./: .gitignore  cargo.toml
flatbuffer/: Cargo.toml  GltfSceneSchema.fbs
flatbuffer/src/: lib.rs
gltf_for_renpy/: Cargo.toml
gltf_for_renpy/src/: lib.rs
gltf_for_renpy/src/animations/: mod.rs
gltf_for_renpy/src/gltf_objects/: empty.rs  mesh.rs  mod.rs  property.rs
gltf_for_renpy/src/images/: mod.rs
gltf_for_renpy/src/renpy_interop/: mod.rs
gltf_for_renpy/tests/: AnimationTest.glb  AnimationTest.gltf  TestComplexAnimation.glb  TestCubeModel.glb  TestYukikioModelStylized.glb  basic_test.rs  tree_test.rs
gltf_for_renpy/tests/MorphTargets/: MorphTargetsTest.glb  MorphTargetsTest.gltf
gltf_for_renpy/tests/SkelthalTest/: AccurasterBotes.glb  BigSkelthal.glb  Skelthal.glb  Skelthal.gltf  parenting_test.glb
gltf_loader/: Cargo.toml  README.md
gltf_loader/src/: lib.rs
gltf_loader/src/animation/: mod.rs
gltf_loader/src/scene/: camera.rs  empty.rs  light.rs  mod.rs
gltf_loader/src/scene/model/: mod.rs  skin.rs  vertex.rs
gltf_loader/src/scene/model/material/: mod.rs  pbr.rs
gltf_loader/src/utils/: gltf_data.rs  mod.rs
gltf_loader/tests/: math_tests.rs
